--- a/packages/vanilla-cafe/package.json
+++ b/packages/vanilla-cafe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vanilla-cafe",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Global State Manager for Vanilla JS",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,7 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/glitch-txs/react-cafe.git"
+    "url": "git+https://github.com/glitch-txs/cafe.git"
   },
   "keywords": [
     "subcribe",
@@ -28,9 +28,9 @@
   "author": "glitch-txs",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/glitch-txs/react-cafe/issues"
+    "url": "https://github.com/glitch-txs/cafe/issues"
   },
-  "homepage": "https://github.com/glitch-txs/react-cafe#readme",
+  "homepage": "https://github.com/glitch-txs/cafe#readme",
   "devDependencies": {
     "tsup": "^7.1.0"
   },
