--- a/packages/react-cafe/package.json
+++ b/packages/react-cafe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-cafe",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "React Café is a global state manager for React applications.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/glitch-txs/react-cafe.git"
+    "url": "git+https://github.com/glitch-txs/cafe.git"
   },
   "keywords": [
     "store",
@@ -24,9 +24,9 @@
   "author": "glitch-txs",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/glitch-txs/react-cafe/issues"
+    "url": "https://github.com/glitch-txs/cafe/issues"
   },
-  "homepage": "https://github.com/glitch-txs/react-cafe#readme",
+  "homepage": "https://github.com/glitch-txs/cafe#readme",
   "publishConfig": {
     "access": "public"
   },
