--- a/packages/vanilla-cafe/package.json
+++ b/packages/vanilla-cafe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vanilla-cafe",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Global State Manager for Vanilla JS",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -35,7 +35,7 @@
     "tsup": "^7.1.0"
   },
   "peerDependencies": {
-    "typescript": "^5.1.6"
+    "typescript": ">=5"
   },
   "peerDependenciesMeta": {
     "typescript": {
